# routio

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  camera.dockerfile  old.dockerfile  routio-config.cmake.in
docs/: advanced_concepts.rst  conf.py  for_developers.rst  getting_started_cpp.rst  getting_started_py.rst  index.rst  installation.rst  intro.rst  syntax.rst
include/echolib/: client.h  service.h
include/routio/: client.h  datatypes.h  helpers.h  loop.h  message.h  routing.h  server.h  service.h
python/: build_wheels.sh  setup.py  setup.py.in  tests.py
python/echolib/: ignition.py
python/examples/: camera.py  chat.py  video.py
python/routio/: __init__.py  __main__.py  array.py  camera.py
python/tests/: tensor.py
src/: algorithms.h  array.cpp  client.cpp  datatypes.cpp  debug.cpp  debug.h  loop.cpp  message.cpp  routing.cpp  server.cpp
src/apps/: cameraserver.cpp  imageserver.cpp  router.cpp  videoclient.cpp  videoserver.cpp
src/examples/: chat.cpp  chunked.cpp
src/generator/: generator.cpp  parser.cpp  parser.h  templates.cpp  templates.h
src/tests/: deadend.cpp  dynamic_client.cpp  tensor.cpp
tests/python2/: run.sh  script.py
tests/stress/: run_clients.py
